Modal windows Works
It's works!

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<button class="size-guide-link modal-target" id="openButton" type="button">Size Guide</button>
 <div class="modal"  tabindex="0" id="popup" aria-modal="true" role="dialog">
 										<div class="modal-backdrop">
-											<div class="modal-body size-guide">
+											<div class="modal-body size-guide" id="modalwin">
 												<h3 class="heading-2">Size guide</h3>
 												        <button class="close" id="closeButton" type="button" tabindex="0">Close</button>
 												<p>Some description about the sizes</p>
